--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,7 @@
 }
 
 body {
+    font-size: 0.7rem !important;
 
     font-family: 'Albert Sans', sans-serif;
     font-family: 'Raleway', sans-serif;
